# hubbit2

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  dev.Dockerfile  sqlx-data.json
backend/migrations/: 20210313101640_manage_updated_at_func.down.sql  20210313101640_manage_updated_at_func.up.sql  20210313102045_create_devices_table.up.sql  20210313102045_create_mac_addresses_table.down.sql  20210313102045_create_mac_addresses_table.up.sql  20210313102051_create_sessions_table.up.sql  20210313102105_create_user_sessions_table.down.sql  20210313102105_create_user_sessions_table.up.sql  20210313102108_create_api_keys_table.up.sql  20210314153901_create_study_years_table.down.sql  20210314153901_create_study_years_table.up.sql  20210314153907_create_study_periods_table.down.sql  20210314153907_create_study_periods_table.up.sql
backend/src/: broker.rs  config.rs  error.rs  event.rs  handlers.rs  lib.rs  main.rs  models.rs
backend/src/controllers/: mod.rs  sessions.rs
backend/src/handlers/: auth.rs  graphql.rs  mod.rs  session.rs
backend/src/repositories/: api_key.rs  device.rs  mac_address.rs  mod.rs  session.rs  study_period.rs  study_year.rs  user.rs  user_session.rs
backend/src/schema/: device.rs  me.rs  mod.rs  session.rs  stats.rs  user.rs
backend/src/schema/session/: query.rs
backend/src/schema/stats/: mod.rs  query.rs  utils.rs
backend/src/schema/user/: mod.rs
backend/src/services/: hour_stats.rs  mod.rs  user.rs  util.rs
backend/src/services/stats/: cache.rs  data.rs  data_storage.rs  day.rs  lifetime.rs  mod.rs  month.rs  service.rs  study_period.rs  study_year.rs  util.rs  year.rs
backend/src/utils/: gamma.rs  mod.rs
frontend/: .env.local  .eslintrc  .gitignore  .prettierrc  Dockerfile  codegen.yml  dev.Dockerfile  next.config.js  package.json  schema.gql  server.js
frontend/pages/: index.tsx
frontend/src/: client.ts  dateUtil.ts  dateUtil.tsx  queries.ts  schema.gql  util.ts
frontend/src/components/active-group-list/: ActiveGroupsList.module.scss  ActiveGroupsList.tsx
frontend/src/components/active-users-list/: ActiveUserList.tsx  ActiveUsersList.module.scss  ActiveUsersList.tsx
frontend/src/components/all-stats-table/: AllStatsTable.tsx
frontend/src/components/device-list/: DeviceList.module.scss  DeviceList.tsx
frontend/src/components/error/: Error.tsx
frontend/src/components/footer/: Footer.module.scss  Footer.tsx
frontend/src/components/header/: Header.module.scss  Header.tsx
frontend/src/components/loading-data/: LoadingData.tsx
frontend/src/components/mac-addresses-list/: MacAddressesList.module.scss  MacAddressesList.tsx
frontend/src/components/stats-navigation/: StatsNavigation.tsx
frontend/src/components/stats-table/: StatsTable.module.scss  (+1 more)
frontend/src/global-styles/: groups.scss  roboto-font.css  styles.scss  tables.scss  vars.scss
frontend/src/pages/: 404.tsx  _app.tsx  _document.tsx  index.module.scss  index.tsx
frontend/src/queries/: getActiveSessions.ts
frontend/src/types/: User.tsx
(+18 files in other folders)
